--- a/index.html
+++ b/index.html
@@ -548,7 +548,28 @@
 
         // Form submission
         document.querySelector('form').addEventListener('submit', function (e) {
-            alert('Obrigado pelo seu contacto! Entraremos em contacto consigo brevemente para confirmar a consulta.');
+            e.preventDefault(); // Prevent default form submission
+
+            const form = e.target;
+            const formData = new FormData(form);
+
+            fetch(form.action, {
+                method: form.method,
+                body: formData,
+                headers: {
+                    'Accept': 'application/json'
+                }
+            }).then(response => {
+                if (response.ok) {
+                    alert('Obrigado pelo seu contacto! Entraremos em contacto consigo brevemente para confirmar a consulta.');
+                    form.reset(); // Clear the form
+                } else {
+                    alert('Ocorreu um erro ao enviar o formulário. Por favor, tente novamente.');
+                }
+            }).catch(error => {
+                alert('Ocorreu um erro ao enviar o formulário. Por favor, tente novamente.');
+                console.error('Error:', error);
+            });
         });
 
         // Header background on scroll
@@ -562,6 +583,8 @@
                 header.style.backdropFilter = 'none';
             }
         });
+
+
     </script>
 </body>
 
