--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Maria João Fernandes | Aprender a Brincar</title>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <style>
         * {
             margin: 0;
@@ -154,7 +155,8 @@
             font-size: 2.5rem;
             font-weight: 300;
             color: #2c3e50;
-            margin-bottom: 20px;
+            margin-bottom: 15px;
+            margin-top: 20px;
             line-height: 1.3;
         }
 
@@ -252,7 +254,6 @@
         .contact-info h3 {
             font-size: 1.3rem;
             font-weight: 500;
-            margin-bottom: 15px;
             color: #ecf0f1;
         }
 
@@ -265,7 +266,7 @@
 
         .contact-form {
             background: rgba(255, 255, 255, 0.05);
-            padding: 40px;
+            padding: 15px;
             border: 1px solid rgba(255, 255, 255, 0.1);
         }
 
@@ -367,6 +368,113 @@
             opacity: 1;
             transform: translateY(0);
         }
+
+        .team-section {
+            background: #f8f9fa;
+        }
+
+        .team-grid {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+            gap: 60px;
+            margin-top: 60px;
+        }
+
+        .team-member {
+            background: white;
+            padding: 40px;
+            text-align: center;
+            box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1);
+            transition: transform 0.3s ease, box-shadow 0.3s ease;
+        }
+
+        .team-member:hover {
+            transform: translateY(-10px);
+            box-shadow: 0 20px 40px rgba(0, 0, 0, 0.15);
+        }
+
+        .team-photo {
+            width: 150px;
+            height: 150px;
+            border-radius: 50%;
+            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            margin: 0 auto 30px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            color: white;
+            font-size: 3rem;
+            font-weight: 300;
+            position: relative;
+            overflow: hidden;
+        }
+
+        .team-photo::before {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            background: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 150 150"><circle cx="40" cy="30" r="8" fill="rgba(255,255,255,0.1)"/><circle cx="100" cy="45" r="6" fill="rgba(255,255,255,0.1)"/><circle cx="70" cy="100" r="7" fill="rgba(255,255,255,0.1)"/><circle cx="25" cy="80" r="5" fill="rgba(255,255,255,0.1)"/><circle cx="120" cy="90" r="6" fill="rgba(255,255,255,0.1)"/></svg>');
+            opacity: 0.6;
+        }
+
+        .team-name {
+            font-size: 1.4rem;
+            font-weight: 500;
+            color: #2c3e50;
+            margin-bottom: 10px;
+        }
+
+        .team-role {
+            font-size: 1rem;
+            color: #667eea;
+            font-weight: 400;
+            margin-bottom: 20px;
+            text-transform: uppercase;
+            letter-spacing: 1px;
+        }
+
+        .team-credentials {
+            font-size: 0.9rem;
+            color: #666;
+            margin-bottom: 20px;
+            font-style: italic;
+        }
+
+        .team-description {
+            font-size: 0.95rem;
+            color: #666;
+            line-height: 1.6;
+            text-align: left;
+            margin-bottom: 20px;
+        }
+
+        .team-social {
+            display: flex;
+            justify-content: center;
+            gap: 15px;
+        }
+
+        .social-link {
+            display: inline-flex;
+            align-items: center;
+            justify-content: center;
+            width: 40px;
+            height: 40px;
+            background: #667eea;
+            color: white;
+            border-radius: 50%;
+            text-decoration: none;
+            font-size: 18px;
+            transition: all 0.3s ease;
+        }
+
+        .social-link:hover {
+            background: #2c3e50;
+            transform: translateY(-2px);
+        }
     </style>
 </head>
 
@@ -409,6 +517,7 @@
                     <p class="service-description">Nós especializamo-nos em Integração Sensorial de Ayres, focando em
                         avaliações e terapia baseadas em sensações, apoiando a educação de estudantes de terapia
                         ocupacional e fundamentando os nossos métodos na investigação mais recente.</p>
+                    <br />
 
                     <div class="service-item fade-in">
                         <h3 class="service-title">Terapia da Fala</h3>
@@ -417,6 +526,7 @@
                             plenamente.
                             Com uma abordagem personalizada e acolhedora, trabalhamos lado a lado com as famílias para
                             garantir que cada criança alcance o seu máximo potencial.</p>
+                        <br />
                     </div>
 
                     <div class="service-item fade-in">
@@ -426,32 +536,55 @@
                             alimentação seletiva, uso de utensílios, comportamentos à hora das refeições e comer em
                             vários
                             ambientes sociais.</p>
+                        <br />
                     </div>
 
                 </div>
             </div>
         </div>
     </section>
-
-    <section class="section about-section" id="sobre">
+    <section class="section team-section" id="equipa">
         <div class="container">
-            <div class="about-grid">
-                <div class="about-text fade-in">
-                    <h2 class="section-title">Uma Abordagem Centrada na Família</h2>
-                    <p class="section-description">Na Clínica Pediátrica Guimarães, cada família é única e especial.
-                        Trabalhamos em estreita colaboração consigo para compreender as necessidades específicas do seu
-                        filho, criando um ambiente de confiança onde o cuidado médico se encontra com o carinho
-                        familiar.</p>
-                    <br>
-                    <p class="section-description">A nossa equipa multidisciplinar combina experiência clínica com uma
-                        abordagem humana, garantindo que cada consulta seja não apenas eficaz, mas também reconfortante
-                        para pais e filhos.</p>
-                </div>
-                <div class="about-image fade-in">
-                    <div class="about-image-content">
-                        <h3>Cuidados Especializados</h3>
-                        <p>Equipamentos modernos em ambiente familiar</p>
+            <div class="section-header fade-in">
+                <h2 class="section-title">A Nossa Equipa</h2>
+            </div>
+
+            <div class="team-grid">
+                <div class="team-member fade-in">
+                    <div class="team-photo">MJ</div>
+                    <h3 class="team-name">Maria João Fernandes</h3>
+                    <p class="team-role">Terapeuta Ocupacional</p>
+                    <p class="team-credentials">Especialista em Integração Sensorial</p>
+                    <p class="team-description">Com mais de 10 anos de experiência em terapia ocupacional pediátrica, Maria João especializa-se em Integração Sensorial de Ayres. A sua paixão por ajudar crianças a desenvolver as suas capacidades motoras e sensoriais reflete-se no seu trabalho personalizado com cada família.</p>
+                    <div class="team-social">
+                        <a href="https://linkedin.com/in/maria-joao-fernandes" class="social-link" target="_blank" rel="noopener noreferrer">
+                            <svg width="18" height="18" viewBox="0 0 24 24" fill="currentColor">
+                                <path d="M20.447 20.452h-3.554v-5.569c0-1.328-.027-3.037-1.852-3.037-1.853 0-2.136 1.445-2.136 2.939v5.667H9.351V9h3.414v1.561h.046c.477-.9 1.637-1.85 3.37-1.85 3.601 0 4.267 2.37 4.267 5.455v6.286zM5.337 7.433c-1.144 0-2.063-.926-2.063-2.065 0-1.138.92-2.063 2.063-2.063 1.14 0 2.064.925 2.064 2.063 0 1.139-.925 2.065-2.064 2.065zm1.782 13.019H3.555V9h3.564v11.452zM22.225 0H1.771C.792 0 0 .774 0 1.729v20.542C0 23.227.792 24 1.771 24h20.451C23.2 24 24 23.227 24 22.271V1.729C24 .774 23.2 0 22.222 0h.003z"/>
+                            </svg>
+                        </a>
                     </div>
+                </div>
+
+                <div class="team-member fade-in">
+                    <div class="team-photo">AS</div>
+                    <h3 class="team-name">Ana Silva</h3>
+                    <p class="team-role">Terapeuta da Fala</p>
+                    <p class="team-credentials">Mestre em Terapia da Fala</p>
+                    <p class="team-description">Ana dedica-se ao desenvolvimento da comunicação infantil, trabalhando com crianças desde os primeiros meses de vida até à adolescência. A sua abordagem lúdica e adaptada a cada idade torna o processo terapêutico natural e eficaz.</p>
+                    <div class="team-social">
+                        <a href="https://linkedin.com/in/ana-silva-terapia-fala" class="social-link" target="_blank" rel="noopener noreferrer">
+                            <svg width="18" height="18" viewBox="0 0 24 24" fill="currentColor">
+                                <path d="M20.447 20.452h-3.554v-5.569c0-1.328-.027-3.037-1.852-3.037-1.853 0-2.136 1.445-2.136 2.939v5.667H9.351V9h3.414v1.561h.046c.477-.9 1.637-1.85 3.37-1.85 3.601 0 4.267 2.37 4.267 5.455v6.286zM5.337 7.433c-1.144 0-2.063-.926-2.063-2.065 0-1.138.92-2.063 2.063-2.063 1.14 0 2.064.925 2.064 2.063 0 1.139-.925 2.065-2.064 2.065zm1.782 13.019H3.555V9h3.564v11.452zM22.225 0H1.771C.792 0 0 .774 0 1.729v20.542C0 23.227.792 24 1.771 24h20.451C23.2 24 24 23.227 24 22.271V1.729C24 .774 23.2 0 22.222 0h.003z"/>
+                            </svg>
+                        </a>
+                    </div>
+                </div>
+                <div class="team-member fade-in">
+                    <div class="team-photo">CR</div>
+                    <h3 class="team-name">Carla Rodrigues</h3>
+                    <p class="team-role">Nutricionista</p>
+                    <p class="team-credentials">Especialista em Nutrição Infantil</p>
+                    <p class="team-description">Carla trabalha com famílias para desenvolver hábitos alimentares saudáveis e resolver desafios relacionados com a alimentação. A sua experiência em terapia alimentar ajuda crianças com dificuldades sensoriais e comportamentais à hora das refeições.</p>
                 </div>
             </div>
         </div>
@@ -459,13 +592,12 @@
 
     <section class="section contact-section" id="contacto">
         <div class="container">
-
             <div class="contact-form fade-in">
                 <h3 style="margin-bottom: 30px; font-size: 1.3rem; color: #ecf0f1;">Marque a Sua Consulta</h3>
                 <form action="https://formspree.io/f/xyzjwvoo" method="POST">
                     <div class="form-group">
-                        <label>Nome dos Pais</label>
-                        <input type="text" name="nome_dos_pais" placeholder="O seu nome completo" required>
+                        <label>Nome do Pai</label>
+                        <input type="text" name="nome_do_pai" placeholder="O seu nome completo" required>
                     </div>
                     <div class="form-group">
                         <label>Nome da Criança</label>
@@ -490,6 +622,7 @@
                     </div>
                     <button type="submit" class="submit-button">Enviar Pedido</button>
                 </form>
+                <br/>
             </div>
 
             <div class="contact-grid">
@@ -497,18 +630,17 @@
                     <h2 class="section-title" style="color: white;">Entre em Contacto</h2>
 
                     <h3>Localização</h3>
-                    <p>Rua de Santo António, 123<br>4800-123 Guimarães<br>Portugal</p>
+                    <p>Rua do Alto da Bandeira 414 R/C<br>4835-014 Guimarães<br>Portugal</p>
 
                     <h3>Contactos</h3>
                     <p>Telefone: 253 123 456<br>Urgências: 916 123 456<br>Email: info@clinicaguimaraes.pt</p>
 
                     <h3>Horários</h3>
                     <p>Segunda a Sexta: 8h00 - 19h00<br>Sábados: 9h00 - 13h00<br>Domingos: Urgências</p>
-
-                    <h3>Facilidades</h3>
-                    <p>Estacionamento gratuito<br>Acesso para mobilidade reduzida<br>Sala de espera familiar</p>
                 </div>
-
+                <div class="map-container fade-in" style="position: relative; width: 100%; padding-top: 56.25%;">
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3878.8781493149986!2d-8.315858987588234!3d41.440476071173556!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd24f127c2fe6d5d%3A0xd6fc9f50002ff340!2sMaria%20Jo%C3%A3o%20Fernandes%20%7C%20Terapia%20Ocupacional%20Pedi%C3%A1trica!5e1!3m2!1sen!2spt!4v1749820369620!5m2!1sen!2spt" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; border: 0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                </div>
             </div>
         </div>
     </section>
@@ -546,7 +678,7 @@
             observer.observe(el);
         });
 
-        // Form submission
+        // Form submission with SweetAlert
         document.querySelector('form').addEventListener('submit', function (e) {
             e.preventDefault(); // Prevent default form submission
 
@@ -561,13 +693,28 @@
                 }
             }).then(response => {
                 if (response.ok) {
-                    alert('Obrigado pelo seu contacto! Entraremos em contacto consigo brevemente para confirmar a consulta.');
+                    Swal.fire({
+                        title: 'Obrigado!',
+                        text: 'Entraremos em contacto consigo brevemente para confirmar a consulta.',
+                        icon: 'success',
+                        confirmButtonText: 'Fechar'
+                    });
                     form.reset(); // Clear the form
                 } else {
-                    alert('Ocorreu um erro ao enviar o formulário. Por favor, tente novamente.');
+                    Swal.fire({
+                        title: 'Erro!',
+                        text: 'Ocorreu um erro ao enviar o formulário. Por favor, tente novamente.',
+                        icon: 'error',
+                        confirmButtonText: 'Fechar'
+                    });
                 }
             }).catch(error => {
-                alert('Ocorreu um erro ao enviar o formulário. Por favor, tente novamente.');
+                Swal.fire({
+                    title: 'Erro!',
+                    text: 'Ocorreu um erro ao enviar o formulário. Por favor, tente novamente.',
+                    icon: 'error',
+                    confirmButtonText: 'Fechar'
+                });
                 console.error('Error:', error);
             });
         });
