--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 </head>
 
 <body>
-    <header class="shadow-sm fixed-top" style="background: orange;">
+    <header class="shadow-sm fixed-top" style="background: rgba(255, 166, 0, 0.881);">
         <div class="container d-flex justify-content-between align-items-center py-3">
-            <a href="#" class="text-dark text-decoration-none fs-4 fw-bold">-LOGO-></a>
+            <a href="#" class="text-dark text-decoration-none fs-4 fw-bold">-LOGO-</a>
             <nav class="d-none d-md-flex gap-4">
                 <a href="#inicio" class="text-white text-decoration-none">Início</a>
                 <a href="#servicos" class="text-white text-decoration-none">Serviços</a>
